--- a/src/workforce-management/Views/Department/Detail.cshtml
+++ b/src/workforce-management/Views/Department/Detail.cshtml
@@ -1,30 +1,33 @@
 ﻿@model workforce_management.ViewModels.DepartmentDetail
 @using Bangazon.Models;
 
-<h2>@Html.DisplayFor(model => model.Department.Name)</h2>
-<h5><i>@Html.DisplayFor(model => model.Department.Description)</i></h5>
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>Employee Name</th>
-            <th>Computer Assigned</th>
-        </tr>
-    </thead>
-    <tbody>
-        @if(@Model.Employees != null)
-        {
-            @foreach (Employee employee in @Model.Employees)
+
+<h1>
+    @Html.DisplayFor(model => model.Department.Name)
+    <a asp-action="Edit" asp-route-id="@Model.Department.DepartmentId"><span style="color:dodgerblue;font-size:0.5em" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+</h1><table class="table table-striped">
+
+        <thead>
+            <tr>
+                <th>Employee Name</th>
+                <th>Computer Assigned</th>
+            </tr>
+        </thead>
+        <tbody>
+            @if (@Model.Employees != null)
             {
-                <tr>
-                    <td><a asp-controller="Employee" asp-action="Detail" asp-route-id="@employee.EmployeeId">@Html.DisplayFor(model => employee.FirstName) @Html.DisplayFor(model => employee.LastName)</a></td>
-                    <td>@Html.DisplayFor(model => employee.Computer.Make) / @Html.DisplayFor(model => employee.Computer.Model)</td>
-                </tr>
+                @foreach (Employee employee in @Model.Employees)
+                {
+                    <tr>
+                        <td><a asp-controller="Employee" asp-action="Detail" asp-route-id="@employee.EmployeeId">@Html.DisplayFor(model => employee.FirstName) @Html.DisplayFor(model => employee.LastName)</a></td>
+                        <td>@Html.DisplayFor(model => employee.Computer.Make) / @Html.DisplayFor(model => employee.Computer.Model)</td>
+                    </tr>
+                }
             }
-        }
-        else
-        { 
-            <tr>The @Html.DisplayFor(model => model.Department.Name) department currently contains no employees.</tr>
-        }
-    </tbody>
-</table>
+            else
+            {
+                <tr>The @Html.DisplayFor(model => model.Department.Name) department currently contains no employees.</tr>
+            }
+        </tbody>
+    </table>
