--- a/src/workforce-management/Views/Employee/Edit.cshtml
+++ b/src/workforce-management/Views/Employee/Edit.cshtml
@@ -3,7 +3,7 @@
 
 <h2>Edit an Employee</h2>
 
-<form asp-action="Edit" id="employeeAdd">
+<form asp-action="Edit" id="employeeEdit">
     <div class="form-horizontal">
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
