--- a/src/workforce-management/Views/Department/Edit.cshtml
+++ b/src/workforce-management/Views/Department/Edit.cshtml
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            <label asp-validation-for="Employees" class="col-md-2 control-label">Selected Attendees</label>
+            <label asp-validation-for="Employees" class="col-md-2 control-label">Selected Employees</label>
             <div class="col-md-10">
                 <span class="text-danger"></span>
                 @Html.ListBoxFor(m => m.selectedEmployees, new MultiSelectList(Model.EmployeesFullName, "Key", "Value", null), new { @class = "form-control" })
