start and end date functionality

--- a/src/workforce-management/Views/TrainingProgram/Edit.cshtml
+++ b/src/workforce-management/Views/TrainingProgram/Edit.cshtml
@@ -36,11 +36,11 @@
             <div class="col-md-10">
                 @if (Model.TrainingProgram == null)
                 {
-                    <input class="form-control" type="date" name="NewTrainingProgram.StartDate" id="TrainingProgram_StartDate" data-val="true" data-val-required="A Start Date is required." />
+                    <input class="form-control" type="date" name="TrainingProgram.StartDate" id="TrainingProgram_StartDate" data-val="true" data-val-required="A Start Date is required." />
                 }
                 else
                 {
-                    <input class="form-control" type="date" name="NewTrainingProgram.StartDate" id="TrainingProgram_StartDate" value="@Model.TrainingProgram.StartDate.ToString("yyyy-MM-dd")" data-val="true" data-val-required="A Start Date is required." />
+                    <input class="form-control" type="date" name="TrainingProgram.StartDate" id="TrainingProgram_StartDate" value="@Model.TrainingProgram.StartDate.ToString("yyyy-MM-dd")" data-val="true" data-val-required="A Start Date is required." />
                 }
                 <span asp-validation-for="TrainingProgram.StartDate" class="text-danger"></span>
             </div>
