--- a/src/workforce-management/Views/TrainingProgram/Detail.cshtml
+++ b/src/workforce-management/Views/TrainingProgram/Detail.cshtml
@@ -1,39 +1,14 @@
-﻿@*@model workforce_management.ViewModels.TrainingProgramDetail
-@using Bangazon.Models;
-
-<h2>@Html.DisplayFor(model => model.TrainingProgram.Name)</h2>
-<a asp-action="Edit" asp-route-id="@Model.TrainingProgram.TrainingProgramId">Edit Program</a>
-
-<div class="row">
-    <div class="col-md-3">
-        <h5>Description:</h5>
-        <p>@Html.DisplayFor(model => model.TrainingProgram.Description)</p>
-    </div>
-    <div class="col-md-3">
-        <h5>Date Created:</h5>
-        <p>@Html.DisplayFor(model => model.TrainingProgram.DateCreated)</p>
-    </div>
-</div>
-
-@foreach (Employee attendee in Model.Attendees)
-{
-    <div class="row">
-        <div class="col-md-10">
-            <div style="display:inline-block">
-                <div><strong>@Html.DisplayFor(modelItem => attendee.FirstName) @Html.DisplayFor(modelItem => attendee.LastName)</strong></div>
-                <div>@Html.DisplayFor(modelItem => attendee.Department.Name)</div>
-            </div>
-
-        </div>
-    </div>
-}*@
-
-@model workforce_management.ViewModels.TrainingProgramDetail
+﻿@model workforce_management.ViewModels.TrainingProgramDetail
 @using Bangazon.Models;
 
 <h1>
     @Html.DisplayFor(model => model.TrainingProgram.Name)
-    <a asp-action="Edit" asp-route-id="@Model.TrainingProgram.TrainingProgramId"><span style="color:dodgerblue;font-size:0.5em" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+
+    @if (Model.TrainingProgram.EndDate > DateTime.Now)
+    {
+        <a asp-action="Edit" asp-route-id="@Model.TrainingProgram.TrainingProgramId"><span style="color:dodgerblue;font-size:0.5em" class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+    }
+
 </h1>
 
 <table class="table table-striped">
@@ -41,14 +16,16 @@
         <tr>
             <th>Training Program Name</th>
             <th>Description</th>
-            <th>Date Added</th>
+            <th>Start Date</th>
+            <th>End Date</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td>@Html.DisplayFor(model => model.TrainingProgram.Name)</td>
             <td>@Html.DisplayFor(model => model.TrainingProgram.Description)</td>
-            <td>@Html.DisplayFor(model => model.TrainingProgram.DateCreated)</td>
+            <td>@Html.DisplayFor(model => model.TrainingProgram.StartDate)</td>
+            <td>@Html.DisplayFor(model => model.TrainingProgram.EndDate)</td>
         </tr>
     </tbody>
 </table>
