--- a/src/workforce-management/Views/Employee/Edit.cshtml
+++ b/src/workforce-management/Views/Employee/Edit.cshtml
@@ -75,6 +75,15 @@
                 @Html.ListBoxFor(m => m.EnrolledTraining, new MultiSelectList(Model.TrainingPrograms, "TrainingProgramId", "Name", null), new { @class = "form-control" })
             </div>
         </div>
+
+        <div class="form-group">
+            <label asp-for="Employee.Administrator" class="col-md-2 control-label">Administrator?</label>
+            <div class="col-md-10">
+                <input type="checkbox" asp-for="Employee.Administrator" class="form-control" />
+                <span asp-validation-for="Employee.Administrator" class="text-danger"></span>
+            </div>
+        </div>
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Submit Changes" class="btn btn-default" id="employeeSubmit"/>
